--- a/local/props.conf
+++ b/local/props.conf
@@ -1,3 +1,3 @@
 [symantec:ep:risk:syslog]
-EVAL-src = coalesce(nullif(replace(Source_Computer_Name, "[^:]+:\s*(.*)", "\1"),null()), dest)
-EVAL-src_ip = coalesce(nullif(replace(Source_Computer_IP, "[^:]+:\s*(.*)", "\1"),null()), dest_ip)
+EVAL-src = coalesce(nullif(replace(Source_Computer_Name, "[^:]+:\s*(.*)", "\1"),""), nullif(replace(Computer_Name, "[^:]+:\s*(.*)", "\1"),""))
+EVAL-src_ip = coalesce(nullif(replace(Source_Computer_IP, "[^:]+:\s*(.*)", "\1"),""), nullif(replace(IP_Address, "[^:]+:\s*(.*)", "\1"),""))
